--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -20,10 +20,20 @@ nav {
 
 .cart-icon {
   cursor: pointer;
-
-  border: 1px solid black;
-
-  padding: 0 3px;
+  display: flex;
+  position: relative;
+  .cart-image {
+    height: 20px;
+  }
+  .cart-position {
+    position: absolute;
+    background-color: red;
+    padding: 1.2px 6px;
+    border-radius: 50%;
+    top: -10px;
+    right: -10px;
+    text-align: center;
+  }
 }
 
 .signs {
