--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+  font-family: "Poppins", sans-serif;
+  background: rgba(0, 0, 0, 0.938);
+}
+
+h2 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+h1,
+a,
+h3,
+h4,
+h5 {
+  font-size: 2.1rem;
+  color: white;
+  font-weight: 300;
+}
+ul {
+  list-style: none;
+}
 a {
   text-decoration: none;
   color: rgb(0, 0, 0);
-  font-weight: bold;
   letter-spacing: 1.8px;
-  font-size: larger;
+  color: white;
 }
 
-header {
-  position: sticky;
-  top: 0;
-  box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
-  z-index: 2;
-  background: white;
+p {
+  font-size: 1.9rem;
 }
-
 button {
-  cursor: pointer;
+  background-color: transparent;
   border: none;
-  background: transparent;
-  font-weight: bold;
-  outline: none;
+  letter-spacing: 1.8px;
+  cursor: pointer;
 }
