--- a/src/components/cartcomponent/cartitem.style.scss
+++ b/src/components/cartcomponent/cartitem.style.scss
@@ -15,5 +15,9 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
+    p {
+      color: black;
+      font-weight: bold;
+    }
   }
 }
