--- a/src/components/collectionItem/collection.style.scss
+++ b/src/components/collectionItem/collection.style.scss
@@ -8,9 +8,11 @@
   cursor: pointer;
   margin: 6px;
 
+  background: white;
+
   .c-button {
     position: absolute;
-    top: 270px;
+    top: 260px;
     display: none;
     border: 1px solid black;
     background: white;
@@ -37,18 +39,23 @@
 
   .image {
     width: 100%;
-    height: 95%;
+    height: 90%;
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+    opacity: 1;
   }
 
   .collection-footer {
-    width: 100%;
-    height: 5%;
+    width: 85%;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+    p {
+      color: black;
+      font-weight: bold;
+    }
 
     .name {
       width: 90%;
