--- a/src/components/collectionPreview/collection.style.scss
+++ b/src/components/collectionPreview/collection.style.scss
@@ -6,6 +6,12 @@
   .title {
     font-size: 28px;
     margin-bottom: 25px;
+    cursor: pointer;
+    h2 {
+      color: rgb(255, 166, 0);
+      font-weight: 300;
+      letter-spacing: 2px;
+    }
   }
 
   .preview {
