--- a/src/pages/hompage/homepage.style.scss
+++ b/src/pages/hompage/homepage.style.scss
@@ -1,3 +1,8 @@
-.homepage {
-  padding: 20px 80px;
+.back-home {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3)),
+    url("../../components/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
