--- a/src/components/collectionPreview/collection.style.scss
+++ b/src/components/collectionPreview/collection.style.scss
@@ -15,7 +15,23 @@
   }
 
   .preview {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media (max-width: 1000px) {
+    .preview {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  @media (max-width: 900px) {
+    .preview {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media (max-width: 600px) {
+    .preview {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
