--- a/src/pages/category/category.style.scss
+++ b/src/pages/category/category.style.scss
@@ -1,6 +1,22 @@
 .cat-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+@media (max-width: 1000px) {
+  .cat-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 900px) {
+  .cat-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 600px) {
+  .cat-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .cat-main {
