--- a/client/src/pages/checkout/checkout.style.scss
+++ b/client/src/pages/checkout/checkout.style.scss
@@ -5,6 +5,10 @@
   font-weight: bold;
   letter-spacing: 2px;
   font-size: 20px;
+  .checkitems {
+    font-size: 1rem;
+    letter-spacing: 1px;
+  }
 
   .checkheader {
     display: flex;
@@ -16,8 +20,13 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1021px) {
   .checkpage {
-    width: 70%;
+    width: 95%;
+  }
+}
+@media (max-width: 800px) {
+  .checkitems {
+    display: none;
   }
 }
