--- a/client/src/pages/hompage/homepage.style.scss
+++ b/client/src/pages/hompage/homepage.style.scss
@@ -2,5 +2,5 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  min-height: 80vh;
 }
